--- a/mta.yaml
+++ b/mta.yaml
@@ -10,6 +10,22 @@ modules:
    requires:
     - name: hdi_Rule_Set
 
+
+ - name: Ruleset
+   type: java
+   path: Ruleset
+   parameters:
+      memory: 512M
+   provides:
+    - name: Ruleset_api
+      properties:
+         url: ${default-url}
+   requires:
+    - name: hdi_Rule_Set
+      properties:
+         JBP_CONFIG_RESOURCE_CONFIGURATION: '[tomcat/webapps/ROOT/META-INF/context.xml:
+            {"service_name_for_DefaultDB" : "~{hdi-container-name}"}]'
+
 resources:
  - name: hdi_Rule_Set
    properties:
