Initial build in HXE 2.0

--- a/mta.yaml
+++ b/mta.yaml
@@ -2,16 +2,24 @@ ID: sandpit
 _schema-version: '2.0'
 description: Sandpit area
 version: 0.0.1
-
 modules:
- - name: Rule_Set
-   type: hdb
-   path: core_db/Ruleset
-   requires:
-    - name: hdi_Rule_Set
-
+  - name: Rule_Set
+    type: hdb
+    path: core_db/Ruleset
+    requires:
+      - name: hdi_Rule_Set
+  
+  - name: web
+    type: html5
+    path: web
+    requires:
+      - name: uaa
 resources:
- - name: hdi_Rule_Set
-   properties:
-      hdi-container-name: ${service-name}
-   type: com.sap.xs.hdi-container
+  - name: hdi_Rule_Set
+    properties:
+      hdi-container-name: '${service-name}'
+    type: com.sap.xs.hdi-container
+  - name: uaa
+    type: com.sap.xs.uaa-space
+    parameters:
+      config_path: ./xs-security.json
