--- a/web/xs-app.json
+++ b/web/xs-app.json
@@ -1,5 +1,14 @@
 {
 	"welcomeFile": "index.html",
-	"authenticationMethod": "none",
-	"routes": []
+	"authenticationMethod": "route",
+	"routes": [{
+		"source": "(.*)(.xsjs)",
+		"destination": "core-backend",
+		"csrfProtection": false,
+		"authenticationType": "xsuaa"
+	}, {
+		"source": "(.*)(.xsodata)",
+		"destination": "core-backend",
+		"authenticationType": "xsuaa"
+	}]
 }
